Fixed navbar size + hero center alignment

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body, 
+body,
 html {
   margin: 0;
   padding: 0;
@@ -14,6 +14,7 @@ html {
 .slogan,
 .phone-number {
   font-style: italic;
+  font-size: 1.3em;
 }
 
 a {
@@ -25,24 +26,57 @@ h3 {
   font-weight: 900;
 }
 
+h1 {
+  font-size: 4em;
+}
+
 .location,
 .hours,
 .contact {
   text-align: center;
 }
 
-.sticky-nav {
+/* .sticky-nav {
   background: #fff;
   position: sticky;
   top: 0;
   z-index: 1000;
 }
+*/
 
-.navbar {
+.sticky-nav {
+  background: #fff;
+  position: fixed;
+  /* Changed from sticky to fixed */
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1000;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10px 20px;
+}
+
+/*
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center; */
+/* padding: 10px 20px; */
+/*
+  height: 60px;
+}
+*/
+
+.navbar {
+  width: 100%;
+  /* Ensure the navbar takes the full width */
+  height: 60px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-right: 20px;
+  margin-left: 10px;
 }
 
 .logo {
@@ -63,8 +97,10 @@ h3 {
 .hero {
   position: relative;
   text-align: center;
-  height: calc(100vh - 60px); /* Adjust height based on navbar's height */
-  padding: 60px 20px;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   /* padding: 150px 20px; */
   /* Adjust padding to account for the sticky nav */
   background-image: url('placeholder-hero.jpg');
@@ -142,6 +178,7 @@ h3 {
 @media (max-width: 768px) {
   .navbar {
     flex-direction: row;
+    height: 60px;
   }
 
   /* .hero-content {
@@ -150,8 +187,10 @@ h3 {
   */
 
   .hero {
-      padding: 60px 20px; /* Adjust padding for mobile */
-      height: calc(100vh - 120px); /* Adjust for mobile navbar height */
+    padding: 60px 20px;
+    /* Adjust padding for mobile */
+    height: calc(100vh - 120px);
+    /* Adjust for mobile navbar height */
   }
 
   .footer {
